--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+**/NotebooksDAWpython/**
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm+all,visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm+all,visualstudiocode,python
 
@@ -279,3 +280,4 @@ poetry.toml
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all,visualstudiocode,python
+
